Implementation of tasklist API. Fixed bug in changeLog. Improved Dto structures
